--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "php": ">=7.4",
-    "nahid/permit": "^2.3",
+    "nahid/permit": "dev-master",
     "myclabs/php-enum": "^1.7"
   },
   "extra": {
